# mis_finanzas

./: st024420232-lab2.cabal
src/main/: TicTaeToe.hs
tests/: Main.hs  RandomTests.hs  UnitTests.hs
