cabal-version:      2.4
name:               st024420232-lab2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jaco Montes
maintainer:         jacobo.montes2004@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable st024420232-lab2

    main-is:          TicTaeToe.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      HUnit,
                      QuickCheck
    hs-source-dirs:   src/main
    default-language: Haskell2010


test-suite my-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    