cabal-version:      2.4
name:               st024420232-lab2
version:            0.1.0.0
author:             Jaco Montes
maintainer:         jacobo.montes2004@gmail.com

extra-source-files: CHANGELOG.md

executable st024420232-lab2

    main-is:          TicTaeToe.hs
    build-depends:    base,
                      HUnit,
                      QuickCheck
    hs-source-dirs:   src/main
    default-language: Haskell2010


test-suite tests
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: Main.hs
    build-depends: base,
                   st024420232-lab2,
                   HUnit,
                   QuickCheck
  default-language: Haskell2010


